@@ -1,3 +1,6 @@
+2395.	[port]		Avoid warning and no effect from "files unlimited"
+			on Linux when running as root. [RT #18335]
+
 2394.	[bug]		Default configuration options set the limit for
 			open files to 'unlimited' as described in the
 			documentation. [RT #18331]
